# ComicReader

./: .clang-format  README.md  meson.build  name.mbekkema.ComicReader.json
data/: meson.build  name.mbekkema.ComicReader.appdata.xml.in  name.mbekkema.ComicReader.desktop.in  name.mbekkema.ComicReader.gschema.xml  name.mbekkema.ComicReader.metainfo.xml.in
data/icons/: meson.build
devscripts/: enter-sdk.env.sh  setup-builddir.sh
po/: POTFILES  meson.build
src/: comicreader-application.c  comicreader-application.h  comicreader-backgroundimageloader.c  comicreader-backgroundimageloader.h  comicreader-debug.h  comicreader-directoryimageloader.c  comicreader-directoryimageloader.h  comicreader-imagedisplay.c  comicreader-imagedisplay.h  comicreader-imageloader.c  comicreader-imageloader.h  comicreader-window.c  comicreader-window.h  comicreader-window.ui  comicreader.gresource.xml  comicreader.in  main.c  main.py  meson.build  window.py  window.ui
src/gtk/: help-overlay.ui
